cleaned up some more instructions

--- a/book.adoc
+++ b/book.adoc
@@ -10,7 +10,7 @@ http://htmlpreview.github.io/?https://raw.githubusercontent.com/arun-gupta/spigo
 
 toc::[]
 
-include::First_Plugin.adoc[]
+include::First-Plugin.adoc[]
 
 include::Block-Money-Chapter.adoc[]
 
